force-app/main/default/objects/Recruiter__c/Recruiter__c.object-meta.xml
<CustomObject>
    <label>Recruiter</label>
    <nameField>
        <displayFormat>REC - {0000}</displayFormat>
        <label>Recruiter ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recruiters</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>