force-app/main/default/objects/Recruiter__c/fields/Commission_Tier__c.field-meta.xml
<CustomField>
    <fullName>Commission_Tier__c</fullName>
    <label>Commission Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Base (1–3 placements)</fullName>
                <default>true</default>
                <label>Base (1–3 placements)</label>
            </value>
            <value>
                <fullName>Silver (4–6 placements)</fullName>
            </value>
            <value>
                <fullName>Gold (7–10 placements)</fullName>
            </value>
            <value>
                <fullName>Platinum (11+ placements)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>