force-app/main/default/objects/Recruiter__c/fields/Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center__c</fullName>
    <externalId>true</externalId>
    <label>Cost Center</label>
    <length>20</length>
    <type>Text</type>
</CustomField>