force-app/main/default/objects/Recruiter__c/fields/Experience_Years__c.field-meta.xml
<CustomField>
    <fullName>Experience_Years__c</fullName>
    <label>Total Experience (Years)</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>