force-app/main/default/objects/Recruiter__c/fields/Monthly_Placement_Target__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Placement_Target__c</fullName>
    <label>Monthly Placement Target</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>