force-app/main/default/objects/Recruiter__c/fields/Recruiter_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Recruiter_Full_Name__c</fullName>
    <formula>Last_Name__c + &apos;, &apos; + First_Name__c</formula>
    <label>Recruiter Full Name</label>
    <type>Text</type>
</CustomField>