force-app/main/default/objects/Recruiter__c/fields/Recruiter_Type__c.field-meta.xml
<CustomField>
    <fullName>Recruiter_Type__c</fullName>
    <label>Recruiter Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
                <default>true</default>
                <label>Internal</label>
            </value>
            <value>
                <fullName>External / Vendor</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>