force-app/main/default/objects/Recruiter__c/fields/Specialization__c.field-meta.xml
<CustomField>
    <fullName>Specialization__c</fullName>
    <label>Specialization</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Java Backend</fullName>
            </value>
            <value>
                <fullName>.NET / Full Stack</fullName>
            </value>
            <value>
                <fullName>Python / Data Engineering</fullName>
            </value>
            <value>
                <fullName>Cloud (AWS / Azure / GCP)</fullName>
            </value>
            <value>
                <fullName>DevOps / SRE</fullName>
            </value>
            <value>
                <fullName>Cybersecurity</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>IT Infrastructure / Networking</fullName>
            </value>
            <value>
                <fullName>Business Analysis / PM</fullName>
            </value>
            <value>
                <fullName>Non-IT / General Staffing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>