force-app/main/default/objects/Recruiter__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesforce User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Recruiter_Profile</relationshipName>
    <type>Lookup</type>
</CustomField>