force-app/main/default/objects/Recruiter__c/fields/Vendor_Code__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Code__c</fullName>
    <externalId>true</externalId>
    <label>Vendor Code</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>