force-app/main/default/objects/Recruiter__c/validationRules/Experience_Years_Valid_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Experience_Years_Valid_Range</fullName>
    <active>true</active>
    <errorConditionFormula>Experience_Years__c &lt; 0 || Experience_Years__c &gt; 50</errorConditionFormula>
    <errorMessage>Your Experience Can&apos;t be less than 0</errorMessage>
</ValidationRule>