force-app/main/default/objects/Recruiter__c/validationRules/Recruiter_Email_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Recruiter_Email_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Email__c)</errorConditionFormula>
    <errorDisplayField>Email__c</errorDisplayField>
    <errorMessage>Recruiter Email is required.</errorMessage>
</ValidationRule>