force-app/main/default/objects/Recruiter__c/validationRules/Recruiter_Status_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Recruiter_Status_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT(Status__c))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Recruiter Status is required</errorMessage>
</ValidationRule>