force-app/main/default/objects/Recruiter__c/validationRules/Recruiter_Type_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Recruiter_Type_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT(Recruiter_Type__c))</errorConditionFormula>
    <errorDisplayField>Recruiter_Type__c</errorDisplayField>
    <errorMessage>Recruiter Type is required.</errorMessage>
</ValidationRule>